--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 <body>
    <h3>Current turn: X</h3>
    <div id="container">
-      <div class="cell">
+      <div class="cell" onclick="makeMove(0)">
          <h1 class="letter" >X</h1>
       </div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
+      <div class="cell" onclick="makeMove(1)"></div>
+      <div class="cell" onclick="makeMove(2)"></div>
+      <div class="cell" onclick="makeMove(3)"></div>
+      <div class="cell" onclick="makeMove(4)"></div>
+      <div class="cell" onclick="makeMove(5)"></div>
+      <div class="cell" onclick="makeMove(6)"></div>
+      <div class="cell" onclick="makeMove(7)"></div>
+      <div class="cell" onclick="makeMove(8)"></div>
    </div>
    <button>Reset</button>
 </body>
