--- a/index.html
+++ b/index.html
@@ -10,18 +10,15 @@
 <body>
    <h3>Current turn: X</h3>
    <div id="container">
-      <div class="cell" onclick="makeMove(0)">
-         <h1 class="letter" ></h1>
-      </div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
+      <div class="cell" index="0"></div>
+      <div class="cell" index="1"></div>
+      <div class="cell" index="2"></div>
+      <div class="cell" index="3"></div>
+      <div class="cell" index="4"></div>
+      <div class="cell" index="5"></div>
+      <div class="cell" index="6"></div>
+      <div class="cell" index="7"></div>
+      <div class="cell" index="8"></div>
    </div>
    <button>Reset</button>
 </body>
