--- a/index.html
+++ b/index.html
@@ -24,5 +24,11 @@
       <div class="cell" index="8"></div>
    </div>
    <button>Reset</button>
+   <div class="footer">
+      <p>By Josh Robertson</p>
+      <a href="https://github.com/Joshrobertson023" target="_blank">
+         <img src="./images/GithubIcon.png" alt="github icon">
+      </a>
+   </div>
 </body>
 </html>
