Fixed image not showing

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
    <div class="footer">
       <p>By Josh Robertson</p>
       <a href="https://github.com/Joshrobertson023" target="_blank">
-         <img src="./images/GithubIcon.png" alt="github icon">
+         <img src="GithubIcon.png" alt="github icon">
       </a>
    </div>
 </body>
